added environment var to bot.conf file

--- a/bot.conf
+++ b/bot.conf
@@ -4,5 +4,7 @@ command=python3 app.py
 
 autostart=true
 autorestart=true
+environment=HOME='/home/voloshinw',USER='voloshinw'
+
 stderr_logfile=/home/voloshinw/ChatBot_PlekhanovUniversity/logfile_err.log
 stdout_logfile=/home/voloshinw/ChatBot_PlekhanovUniversity/logfile.log
